--- a/GAS APP WHC/SmartGas/SmartGas/SmartGas/Views/MainPage.xaml
+++ b/GAS APP WHC/SmartGas/SmartGas/SmartGas/Views/MainPage.xaml
@@ -59,7 +59,7 @@
     <dxn:TabPageItem>
         <NavigationPage Title="Popup" Icon="ic_popup">
             <x:Arguments>
-                <local:PopupPage/>
+                <local:LoginPage/>
             </x:Arguments>
         </NavigationPage>
     </dxn:TabPageItem>
