--- a/GAS APP WHC/SmartGas/SmartGas/SmartGas/Views/LoginPage.xaml
+++ b/GAS APP WHC/SmartGas/SmartGas/SmartGas/Views/LoginPage.xaml
@@ -2,10 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:dxe="clr-namespace:DevExpress.XamarinForms.Editors;assembly=DevExpress.XamarinForms.Editors"
-             BackgroundColor="{StaticResource NormalBackgroundColor}"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
              ios:Page.UseSafeArea="true"
-             x:Class="SmartGas.Views.LoginPage">
+             x:Class="SmartGas.Views.LoginPage" BackgroundImageSource="oxy_gas.jpg" NavigationPage.HasNavigationBar="False">
 
     <ContentPage.Content>
         <Grid ColumnSpacing="20" Padding="15" VerticalOptions="Center">
@@ -18,8 +17,8 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <dxe:TextEdit Text="{Binding UserName}" LabelText="Login" Margin="0" />
-            <dxe:PasswordEdit Text="{Binding Password}" LabelText="Password"  LabelFontSize="Small" Margin="0" Grid.Row="1" />
-            <Button Text="Log In" Command="{Binding LoginCommand}" Margin="0,10,0,0" Grid.Row="2" Style="{StaticResource PrimaryButton}"/>
+            <dxe:PasswordEdit Text="{Binding Password}" LabelText="Password"  LabelFontSize="Small" Margin="0" Grid.Row="1"/>
+            <Button Text="Log In" Command="{Binding LoginCommand}" Margin="0,10,0,0" Grid.Row="2" Style="{StaticResource LoginButton}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
