--- a/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas/Views/InventoryListPage.xaml
+++ b/GAS APP WHC/Source/SmartGas/SmartGas/SmartGas/Views/InventoryListPage.xaml
@@ -18,7 +18,7 @@
         <ControlTemplate>
             <StackLayout Spacing="0">
                 <!--  Title View  -->
-                <controls:TitleView Title="INVENTORY">
+                <controls:TitleView Title="Tồn Kho">
                 </controls:TitleView>
                 <ContentPresenter />
             </StackLayout>
@@ -28,117 +28,6 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Padding="0" Spacing="16">
-
-                <!--  Header label  -->
-                <Label
-                    Margin="16,16,0,0"
-                    FontSize="12"
-                    HorizontalOptions="Start"
-                    LineHeight="{OnPlatform Default=-1,
-                                            Android=1.25}"
-                    Style="{StaticResource TitleLabelStyle}"
-                    Text="FEATURED STORIES"
-                    TextColor="{DynamicResource Gray-800}" />
-
-                <!--<Rotator for featured blog stories>-->
-                <syncfusion:SfRotator
-                    x:Name="Rotator"
-                    Margin="16,0"
-                    BackgroundColor="{StaticResource Transparent}"
-                    DotPlacement="OutSide"
-                    DotsBorderColor="Transparent"
-                    HeightRequest="276"
-                    HorizontalOptions="StartAndExpand"
-                    ItemsSource="{Binding FeaturedStories}"
-                    NavigationDirection="Horizontal"
-                    NavigationStripMode="Dots"
-                    SelectedDotColor="{DynamicResource PrimaryColor}"
-                    UnselectedDotColor="{DynamicResource Gray-200}"
-                    VerticalOptions="Start">
-                    <syncfusion:SfRotator.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout
-                                Margin="0"
-                                Padding="0"
-                                Spacing="0">
-                                <controls:CustomShadowFrame
-                                    Margin="4"
-                                    Padding="0"
-                                    BackgroundColor="{StaticResource GrayShadowColor}"
-                                    BorderWidth="0"
-                                    CornerRadius="4"
-                                    HasShadow="True"
-                                    Radius="4">
-                                    <border:SfBorder
-                                        BorderColor="Transparent"
-                                        BorderWidth="0"
-                                        CornerRadius="4">
-                                        <StackLayout Spacing="0">
-
-                                            <!--  Image of the blog  -->
-                                            <Image
-                                                Aspect="AspectFill"
-                                                BackgroundColor="{DynamicResource Gray-200}"
-                                                HeightRequest="140">
-                                                <Image.Source>
-                                                    <UriImageSource
-                                                        CacheValidity="14"
-                                                        CachingEnabled="true"
-                                                        Uri="{Binding ImagePath}" />
-                                                </Image.Source>
-                                            </Image>
-
-                                            <!--  Blog tile  -->
-                                            <Label
-                                                helper:RTLHelper.Margin="16,16,0,8"
-                                                FontFamily="Montserrat-Bold"
-                                                HorizontalOptions="Start"
-                                                LineBreakMode="TailTruncation"
-                                                LineHeight="{OnPlatform Default=-1,
-                                                                        Android=1.25}"
-                                                MaxLines="1"
-                                                Style="{StaticResource TitleLabelStyle}"
-                                                Text="{Binding Name}" />
-
-                                            <!--  Author name  -->
-                                            <Label
-                                                helper:RTLHelper.Margin="16,0,0,0"
-                                                FontFamily="Montserrat-Medium"
-                                                FontSize="12"
-                                                LineHeight="{OnPlatform Default=-1,
-                                                                        Android=1.5}"
-                                                Text="{Binding Author}"
-                                                TextColor="{DynamicResource Gray-900}"
-                                                VerticalOptions="End" />
-
-                                            <!--  Published date and average reading time  -->
-                                            <Label
-                                                Margin="16,2,16,16"
-                                                FontFamily="Montserrat-Regular"
-                                                FontSize="12"
-                                                LineHeight="{OnPlatform Default=-1,
-                                                                        Android=1.5}"
-                                                TextColor="{DynamicResource Gray-700}">
-                                                <Label.FormattedText>
-                                                    <FormattedString>
-                                                        <Span Text="{Binding Date}" />
-                                                        <Span Text=" | " />
-                                                        <Span Text="{Binding AverageReadingTime}" />
-                                                    </FormattedString>
-                                                </Label.FormattedText>
-                                            </Label>
-                                            <StackLayout.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding Path=BindingContext.FeatureStoriesCommand, Source={x:Reference Rotator}}" CommandParameter="{Binding .}" />
-                                            </StackLayout.GestureRecognizers>
-
-                                        </StackLayout>
-                                    </border:SfBorder>
-                                </controls:CustomShadowFrame>
-                            </StackLayout>
-                        </DataTemplate>
-                    </syncfusion:SfRotator.ItemTemplate>
-                </syncfusion:SfRotator>
-
                 <!--  Header label  -->
                 <Label
                     Margin="16,0"
@@ -147,13 +36,13 @@
                     LineHeight="{OnPlatform Default=-1,
                                             Android=1.25}"
                     Style="{StaticResource TitleLabelStyle}"
-                    Text="LATEST STORIES"
+                    Text="Tồn kho khí GAS"
                     TextColor="{DynamicResource Gray-800}" />
 
                 <!--  Featured blog list  -->
                 <StackLayout
                     Margin="0,0,0,16"
-                    BindableLayout.ItemsSource="{Binding LatestStories}"
+                    BindableLayout.ItemsSource="{Binding GasInventories}"
                     Spacing="16">
                     <BindableLayout.ItemTemplate>
                         <DataTemplate>
